# PyDevToolkit-MagicCLI

./: .bandit  .commit_cache.json  .flake8  .gitignore  .pylintrc  AGENTS.md  CHANGELOG.md  CODEBUDDY.md  CODE_REVIEW_FIXES.md  CONTRIBUTING.md  GLOBAL_INSTALLATION_PLAN.md  IFLOW.md  LICENSE  MULTI_COMMIT_CHANGES.md  Makefile  QWEN.md  README.md  SECURITY_FIX.md  WARP.md  check_line.py  config.yaml  debug_security.py  implement.md  install.sh  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  setup.sh  test_git_enhancements.py  test_imports.py
.codebuddy/agents/: fullstack-accelerator.md
.github/workflows/: README.md  ci-cd.yml  code-review.yml
assets/fonts/: DOS Rebel.flf
automation/: git_operations.py  structure_viewer.py
automation/core/: git_client.py
automation/dev_mode/: PORT_KILLER_README.md  create_frontend.py  dev_mode.py  docker_quick.py  format_code.py  install_deps.py  port_killer.py  port_killer_command.py  port_manager.py  run_project.py  test_project.py
automation/github/: SSH_CONFIG_README.md  __init__.py  git_cache.py  git_initializer.py  git_push.py  git_removesubmodule.py  git_ssh_config.py
config/: development.yaml  security.yaml
docs/: GLOBAL_INSTALLATION_GUIDE.md  GROQ_API_SETUP.md  README.md
magic_cli/: Readme.md  __init__.py  __main__.py
magic_cli/application/: __init__.py
magic_cli/application/services/: __init__.py
magic_cli/cli/: __init__.py  main.py
magic_cli/core/: __init__.py  config.py  exceptions.py
magic_cli/presentation/: __init__.py
magic_cli/presentation/cli/: __init__.py  menu.py  menu_base.py  navigation.py  renderer.py
openspec/: project.md
scripts/: bump_version.py  install-dev.sh  install.ps1  install.sh  restore_config.sh  setup.sh  uninstall.ps1  uninstall.sh  uninstall_global.sh
src/: __init__.py  banner.py  changelog_generator.py  folder_navigator.py  git_operations.py  magic.py  main.py  menu.py  structure_viewer.py
src/assets/fonts/: DOS Rebel.flf
src/backend/: __init__.py  backend_menu.py
src/backend/api/: api_generator.py
src/backend/auth/: auth_manager.py
src/backend/database/: __init__.py  db_manager.py  postgres_commands.py  prisma_tools.py
src/backend/framework/: framework_tools.py
src/cli/: __init__.py  magic.py
src/config/: default.yaml  development.yaml  security.yaml
src/core/: __init__.py  command_handler.py  config.py  exceptions.py  git_client.py  loading.py  logging.py  menu_base.py  menu_handler.py  menu_navigation.py  menu_renderer.py  security.py
src/core/menu/: __init__.py  base.py  handler.py  navigation.py  renderer.py
src/core/security/: __init__.py  validator.py
src/core/utils/: __init__.py  config.py  exceptions.py  git_client.py  logging.py
src/dev_mode/: create_frontend.py  dev_mode.py  docker_quick.py  install_deps.py  menu_utils.py  port_killer.py  port_killer_command.py  run_project.py  test_project.py
src/github/: MissingHighImpactOperations.md  __init__.py  git_diff.py  git_log.py  git_pull.py  git_push.py  git_recover.py  git_removesubmodule.py  git_stash.py
src/modules/: __init__.py  others_menu.py
src/modules/ai_ml/: __init__.py  ai_ml.py
src/modules/api_tools/: __init__.py  api_tools.py
src/modules/backend_development/: __init__.py
src/modules/code_analysis/: __init__.py  code_analysis.py
src/modules/code_quality/: __init__.py  code_quality.py
src/modules/cross_platform/: __init__.py  cross_platform.py
src/modules/database/: __init__.py  database.py
src/modules/debugging/: __init__.py  debugging.py
src/modules/dependency_management/: __init__.py  dependency_manager.py
src/modules/devops/: __init__.py  devops.py
src/modules/documentation/: __init__.py  documentation.py
src/modules/git_operations/: __init__.py  changelog.py  (+1 more)
src/ui/: __init__.py  banner.py
tests/: README.md  conftest.py  test_error_handling.py  test_git_pull.py  test_integration.py  test_security.py  testall.py
(+50 files in other folders)
